NEW SUTFF;

New Sunleia beam Icon & Crimson cloth texture
New Blazymancer 2-piece armor, 10% spell power, 100 max mana, 15% fire magic resistance, full set ability: Blazing Aura + when attacked, cast firebolt
New Ebony wizard armor set, replaces regular ebony armor in Crimson Wizard Recipe
New Blessed Priest armor set, 20% holy spell power, 125 max mana + full set bonus: During the day,  cast speed, cooldown reduction and max blood/eldritch spell resistance
Blessed Amulet now removes Iron's harmful effects
Counselor Tunic & Leggings now have +15% eldritch power and +50 max mana
New Spell - Eldritch Slash, iron's flaming strike but instead of setting your opponent on fire, it does more damage & damage is boosted by the Oath weapon
New Spell - Magic Arrow
New Spell - Triple Fireball
New Spell - Acid Fireball
New Spell - Fairy's Wish, grants 2 random positive effects
New Spell - Crimson Oath: Lose 80-30% of health and  bleed, but gain 20-60% blood spell power

New config for invis ability to set how long the invis effect lasts when given


Reworks:
Changed Crimson Cloth recipe to 3x fleshy cloth, 2 magic cloth, 1 divine blood vial, 1 blood rune & 2 ebony raw
Crimson Wizard is now crafted using ebony wizard armor instead of regular ebony
Oath is now inscribed with Eldritch Slash

STAFF REWORKS:
All scepters/staffs are now an iron's Spells StaffItem, being able to cast any spell on right click
Scepter of Compensation - Magic Arrow turned into a spell, Passive Ability: Attacking with spells gives you jump boost
Pyroclastic Staff - Triple fireball turned into a spell, Passive Ability: Attacking with Fire spells gives you "flame grant me strength" & sets your enemies on fire
Corroding Flame - Acid Fireball is now a spell, Passive ability: Attacking with spells gives your enemies poison effect
Fairy Wand - Removed fairy missile, too generic/close to Magic Arrow. Secondary ability replaced with Fairy's Wish imbued spell, Passive Ability: your spells levitate enemies