@@ -2,11 +2,20 @@ package com.skydude.dacxirons.datagen;
 
 
 import com.skydude.dacxirons.dacxirons;
+import net.minecraft.DetectedVersion;
 import net.minecraft.data.DataGenerator;
 import net.minecraft.data.PackOutput;
+import net.minecraft.data.metadata.PackMetadataGenerator;
+import net.minecraft.network.chat.Component;
+import net.minecraft.server.packs.PackType;
+import net.minecraft.server.packs.metadata.pack.PackMetadataSection;
 import net.minecraftforge.data.event.GatherDataEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
+
+import java.util.Arrays;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Mod.EventBusSubscriber(modid = dacxirons.MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD)
 public class dacxironsDataGenerators {
@@ -19,5 +28,7 @@ public class dacxironsDataGenerators {
 
 
         generator.addProvider(event.includeServer(), new dacxironsGlobalLootModifiersProvider(packOutput));
+
+
     }
 }
