@@ -21,7 +21,7 @@
     }
   },
   "result": {
-    "item": "dungeons_and_combat:fairy_scepter",
+    "item": "dacxirons:fairy_wand_staf",
     "count": 1
   }
 }
